# info3-api

./: .gitignore  CMakeLists.txt
TP_Fibonacci/: Makefile  fibo.c  fibo.h  fibonacci.c
TP_Huffman/: huff_decode.c  huff_encode.c  huffman_code.h  test.sh
TP_Mesure/: Makefile  ex1.c  ex2.c  instru.c  instru.h  mesure_tris.c  tests.c  tris.c  tris.h
